new changes from rm

--- a/clients/front_end/signup.html
+++ b/clients/front_end/signup.html
@@ -92,7 +92,7 @@
             <style>
                 .button-wrapper {
                     display: inline-block;
-                    margin-right: 20px; /* change the value to adjust the spacing */
+                    margin-right: 20px; 
                 }
             </style>
         </form>
@@ -100,7 +100,7 @@
     <!-- The right section of the page -->
     <section class="Right">
         <div class="onboarding-image-cover">
-            <!-- An image of a person using a mobile device -->
+            <!-- An image of a female using a mobile device -->
             <img class="onboarding-image" src="./Images/invest 2.jpg" alt="female on a her mobile devices">
         </div>
     </section>
